--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <!-- End Image -->
           <!-- Begin Personal Information -->
           <div class="self">
-            <h1 class="name">Edgar Flores Villa <br />
+            <h1 class="name">Edgar Flores Villa <br /></h1>
             <ul>
               <li class="ad">Mexico prehispanico 2,Mz. 8 Lt. 43 , Ecatepec de Morelos. </li>
               <li class="mail">edgar.fv15@gmail.com</li>
@@ -133,8 +133,8 @@
           </div>
         </div>
 		      <div class="key">
-            <h3>Descargar llave publica</h3>
-  	    <h3>Descargar llave de Candy</h3>
+             <a><imput type="buton" value="Descargar" onclick="window.location.href='mykey.txt'"><h3> llave publica</h3></imput></a>
+  	    <a><imput type="buton" value="Descargar" onclick="window.location.href='Candykey.txt'"><h3> llave de Candy</h3></imput></a>
           </div>
         <!-- End 4th Row -->
          <!-- Begin 5th Row -->
