--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="self">
             <h1 class="name">Edgar Flores Villa <br /></h1>
             <ul>
-              <li class="ad">Mexico prehispanico 2,Mz. 8 Lt. 43 , Ecatepec de Morelos. </li>
+              <li class="ad">Mexico prehispanico 2,Mz.<br> 8 Lt. 43 ,Ecatepec de Morelos. </li>
               <li class="mail">edgar.fv15@gmail.com</li>
               <li class="tel">+55 45 06 23 75</li>
               
@@ -133,8 +133,8 @@
           </div>
         </div>
 		      <div class="key">
-             <a><imput type="buton" value="Descargar" onclick="window.location.href='mykey.txt'"><h3> llave publica</h3></imput></a>
-  	    <a><imput type="buton" value="Descargar" onclick="window.location.href='Candykey.txt'"><h3> llave de Candy</h3></imput></a>
+             <a><imput type="buton" value="Descargar" download="mykey.txt" onclick="window.location.href='mykey.txt'"><h3> llave publica</h3></imput></a>
+  	    <a><imput type="buton" value="Descargar" download="Candykey.txt" onclick="window.location.href='Candykey.txt'"><h3> llave de Candy</h3></imput></a>
           </div>
         <!-- End 4th Row -->
          <!-- Begin 5th Row -->
