--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           <div class="self">
             <h1 class="name">Edgar Flores Villa <br /></h1>
             <ul>
-              <li class="ad">Mexico prehispanico 2,Mz.<br> 8 Lt. 43 ,Ecatepec de Morelos. </li>
-              <li class="mail">edgar.fv15@gmail.com</li>
+              <li class="ad">Mexico prehispanico 2,Mz. 8 Lt. 43 ,Ecatepec de Morelos.</li>
+              <br><li class="mail">edgar.fv15@gmail.com</li>
               <li class="tel">+55 45 06 23 75</li>
               
             </ul>
@@ -133,8 +133,8 @@
           </div>
         </div>
 		      <div class="key">
-             <a><imput type="buton" value="Descargar" download="mykey.txt" onclick="window.location.href='mykey.txt'"><h3> llave publica</h3></imput></a>
-  	    <a><imput type="buton" value="Descargar" download="Candykey.txt" onclick="window.location.href='Candykey.txt'"><h3> llave de Candy</h3></imput></a>
+             <a download="mykey.txt"><imput type="buton" value="Descargar"  onclick="window.location.href='mykey.txt'"><h3> 1.-llave publica</h3></imput></a>
+  	    <a download="Candykey.txt"><imput type="buton" value="Descargar"  onclick="window.location.href='Candykey.txt'"><h3> 2.-llave de Candy</h3></imput></a>
           </div>
         <!-- End 4th Row -->
          <!-- Begin 5th Row -->
