--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
           </div>
         </div>
 		      <div class="key">
-             <a download="mykey.txt"><imput type="buton" value="Descargar"  onclick="window.location.href='mykey.txt'"><h3> 1.-llave publica</h3></imput></a>
-  	    <a download="Candykey.txt"><imput type="buton" value="Descargar"  onclick="window.location.href='Candykey.txt'"><h3> 2.-llave de Candy</h3></imput></a>
+             <a download="mykey.txt" href="mykey.txt"><h3> 1.-llave publica</h3></a>
+  	    <a download="Candykey.txt" href="Candykey.txt"><h3> 2.-llave de Candy</h3></a>
           </div>
         <!-- End 4th Row -->
          <!-- Begin 5th Row -->
