--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 		      <div class="key">
 			      <h3>
 <a name="key" class="anchor" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Public key</h3>
-             <a download="mykey.txt" href="mykey.txt"><h3> 1-llave publica</h3></a>
-  	    <a download="Candykey.txt" href="Candykey.txt"><h3> 2-llave de Candy</h3></a>
+             <a download="mykey.txt" href="mykey.txt"><h3> 1-My public key</h3></a>
+  	    <a download="Candykey.txt" href="Candykey.txt"><h3> 2-Candy key</h3></a>
           </div>
         <!-- End 4th Row -->
          <!-- Begin 5th Row -->
